feat: Proxy Gemini API requests to backend
Moves Gemini API calls from the client-side service to a Vercel serverless function. This change enhances security by preventing direct exposure of the API key and standardizes the API interaction logic.

Includes updates to `package.json` and `index.html` to incorporate `@vercel/node` and ensure correct module resolution for the new serverless function. The `geminiService.ts` file is refactored to call the new backend endpoint instead of directly interacting with the Gemini API.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.1.1/",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5/xlsx.mjs",
-    "papaparse": "https://aistudiocdn.com/papaparse@^5.4.1"
+    "papaparse": "https://aistudiocdn.com/papaparse@^5.4.1",
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.22"
   }
 }
 </script>
