--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     "@google/genai": "https://aistudiocdn.com/@google/genai@^1.19.0",
     "xlsx": "https://aistudiocdn.com/xlsx@^0.18.5/xlsx.mjs",
     "papaparse": "https://aistudiocdn.com/papaparse@^5.4.1",
-    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.22"
+    "@vercel/node": "https://aistudiocdn.com/@vercel/node@^5.3.22",
+    "@supabase/supabase-js": "https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/+esm"
   }
 }
 </script>
